# eink-family-calendar

./: .gitignore  README.md
esp32/: esp32.ino
server/: Dockerfile  calendar_api.py  calendar_config.py  docker-compose.yml  font_handler.py  image_generator.py  llm_handler.py  main.py  pyproject.toml  requirements.txt  weather_handler.py  web_server.py
